--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -51,7 +51,7 @@
                                 class="ml-2 " style="color: black;font-weight: 500;">Save Address</span>
                         </div>
                         <div>
-                            <div style=" background-color: #e5ecee;width: 730px;height: 300px;overflow:auto;"
+                            <div style=" background-color: #e5ecee;height: 300px;overflow:auto;"
                                 class="px-5">
                                 <h4 class="pt-3">Choose a Address</h4>
                                 {{#each address}}
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 pt-2">
                         <div class="order_box">
                             <h2>Your Order</h2>
                             <ul class="list list_2">
@@ -151,13 +151,11 @@
                                 <div class="radion_btn">
                                     <input type="radio" id="f-option6" name="paymentMethod" value="online">
                                     <label for="f-option6">Razor Pay</label>
-                                    <img src="img/product/card.jpg" alt="">
                                     <div class="check"></div>
                                 </div>
                                 <div class="radion_btn">
                                     <input type="radio" id="f-option7" name="paymentMethod" value="paypal">
                                     <label for="f-option7">Paypal</label>
-                                    <img src="img/product/card.jpg" alt="">
                                     <div class="check"></div>
                                 </div>
                                 <p>Pay via PayPal; you can pay with your credit card if you don’t have a PayPal
@@ -167,7 +165,7 @@
                             <button type="submit" onclick="return validate()" class="primary-btn">Proceed to
                                 Pay</button>
                         </div>
-        </form>
+        
     </div>
     </div>
     </div>
