--- a/views/user/userprofile.hbs
+++ b/views/user/userprofile.hbs
@@ -1,8 +1,9 @@
 <div class="container rounded bg-white mt-5 pt-5 mb-5">
   <hr>
   <div class="row">
-    <div class="col-md-3 border-right">
-      <div class="d-flex flex-column ml-4 py-3"><img class="rounded-circle " width="150px"
+    <div class="col-md-4 col-lg-3 border-right d-flex justify-content-center">
+      <div>
+        <div class="d-flex flex-column ml-1 py-3"><img class="rounded-circle " width="150px"
           src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span
           class="font-weight-bold">{{user.name}}</span><span class="text-black-50"></span>{{user.email}}<span> </span>
       </div>
@@ -11,12 +12,16 @@
       </div>
       <div class="mt-3"><button type="button" style="border-radius: 3px; width:12rem; line-height: 40px; border:none"
           class="primary-btn text-white" data-toggle="modal" data-target="#address" data-whatever="@mdo">Add
-          Address</button></div>
+          Address</button>
+      </div>
       <div class="mt-3"><button type="button" style="border-radius: 3px; width:12rem; line-height: 40px; border:none"
           class="primary-btn text-white" data-toggle="modal" data-target="#showaddress" data-whatever="@mdo">Show
-          Address</button></div>
+          Address</button>
+      </div>
+      </div>
     </div>
-    <div class="col-md-6 border-right ">
+    <div class="col-md-8 col-lg-6 border-right mt-2">
+      <hr>
       <div class="">
         <h3>Orders</h3>
         {{#each data}}
@@ -25,27 +30,27 @@
         <hr>
         {{#each product}}
         <div class="row ">
-          <div class="col-md-2">
+          <div class="col-md-2 col-lg-2">
           <img style="width:5rem;" src="/proimg/{{this._id}}.jpg" alt="">
         </div>
-          <div class="col-md-4 pt-2">
-          <span>{{this.name}}</span>
+          <div class="col-md-6 col-lg-4  pt-1">
+          <span >{{this.name}}</span>
         </div>
-        <div class="col-md-3 pt-2">
+        <div class="col-md-6 col-lg-3 pt-2">
           <label for=""><h6 style="color: #777777;font-weight: bold;">Price : </h6></label><span>{{this.price}}</span>
         </div>
 
-        <div class="col-md-3 pt-2">
+        <div class="col-md-6 col-lg-3 pt-2">
           <label for=""><h6 style="color: #777777;font-weight: bold;">Quantity : </h6></label><span>{{this.quantity}}</span>
 
         </div>
         </div>
         {{/each}}
-        <div class="row mt-4">
+        <div class="row mt-3">
                   <div class="col-md-3">
           <label for=""><h6 style="color: #777777;font-weight: bold;">Total : </h6></label><span>{{this.total}}</span>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-5">
           <label for=""><h6 style="color: #777777;font-weight: bold;">Date : </h6></label><span>{{this.date}}</span>
         </div>
         <div class="col-md-4">
@@ -74,7 +79,7 @@
       </div>
 
 
-      <div class="d-flex justify-content-end"> <button type="button"
+      <div class="d-flex justify-content-end mt-3"> <button type="button"
           style="border-radius: 3px; line-height: 40px; border:none" class="primary-btn text-white" data-toggle="modal"
           data-target="#a555" data-whatever="@mdo">View More</button></div>
 
@@ -177,7 +182,7 @@
                     onkeyup="namevalidate()">
                   <div class="text-danger" id="name-error"></div>
                 </div>
-                <div class="col-md-5 form-group p_star ml-5 px-2">
+                <div class="col-md-5 form-group p_star  px-2">
                   <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last name"
                     onkeyup="lastnamevalidate()">
                   <div class="text-danger" id="lastname-error"></div>
@@ -188,7 +193,7 @@
                     onkeyup="emailvalidate()">
                   <div class="text-danger" id="email-error"></div>
                 </div>
-                <div class="col-md-5 form-group p_star ml-5 px-2">
+                <div class="col-md-5 form-group p_star px-2">
                   <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Phone number"
                     onkeyup="numbervalidate()">
                   <div class="text-danger" id="mobile-error"></div>
@@ -303,7 +308,7 @@
           <div class="modal-dialog" style="max-width: 700px" role="document">
             <div class="modal-content ">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add Address</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Edit Address</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -315,7 +320,7 @@
                       placeholder="First name" onkeyup="namevalidate()">
                     <div class="text-danger" id="name-error"></div>
                   </div>
-                  <div class="col-md-5 form-group p_star ml-5 px-2">
+                  <div class="col-md-5 form-group p_star  px-2">
                     <input type="text" class="form-control" id="lastname" name="lastname" value="{{this.lastname}}"
                       placeholder="Last name" onkeyup="lastnamevalidate()">
                     <div class="text-danger" id="lastname-error"></div>
@@ -326,7 +331,7 @@
                       placeholder="Email Address" onkeyup="emailvalidate()">
                     <div class="text-danger" id="email-error"></div>
                   </div>
-                  <div class="col-md-5 form-group p_star ml-5 px-2">
+                  <div class="col-md-5 form-group p_star  px-2">
                     <input type="text" class="form-control" id="mobile" name="mobile" value="{{this.mobile}}"
                       placeholder="Phone number" onkeyup="numbervalidate()">
                     <div class="text-danger" id="mobile-error"></div>
@@ -364,12 +369,14 @@
 
 
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3">
       <div class="p-3 py-5">
 
         <div class="d-flex justify-content-between align-items-center experience"><span>
             <h4>Change Password</h4>
-          </span></div><br>
+          </span>
+        </div>
+        <br>
         <form method="post" id="changeUserPassword-form">
           <div class="col-md-12"><label class="labels">Enter Current Password</label><input type="password"
               class="form-control" id="password" name="currentPassword" onkeyup="passwordvalidate()"></div> <br>
@@ -386,8 +393,6 @@
       </div>
     </div>
   </div>
-</div>
-</div>
 </div>
 
 <script>
