--- a/views/user/wishlist.hbs
+++ b/views/user/wishlist.hbs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="cart_inner">
             {{#if product}}
-            <div class="table-responsive">
+            {{!-- <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
@@ -48,7 +48,59 @@
 
                     </tbody>
                 </table>
+            </div> --}}
+
+            <div class="row d-none d-md-inline ">
+                <div class="d-flex">
+                    <div class="col-6 ml-2">
+                        <div>Product</div>
+                    </div>
+                    <div class="col-1 ml-2 ">
+                        <div>Price</div>
+                    </div>
+                    <div class="col-3 text-center">
+                        <div>Option</div>
+                    </div>
+                    <div class="col-2">
+                        <div>Remove</div>
+                    </div>
+                </div>
+                <hr>
             </div>
+                
+            {{#each product}}
+            <div class="row mt-3">
+                <div class=" col-md-6">
+                    <div class="media">
+                        <a href="/product-detail/pp/{{this.wishproduct._id}}">
+                            <div class="d-flex">
+
+                                <img style="width:5rem;" src="/proimg/{{this.wishproduct._id}}.jpg" alt="">
+                            </div>
+                        </a>
+                        <div class="media-body  mt-4 px-3">
+                            <p>{{this.wishproduct.name}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-3 col-md-1  mt-4">
+                    <div class="">
+                        <h5>₹{{this.wishproduct.price}}</h5>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-5 col-md-3 mt-4 text-center">
+                    <a onclick="addToCart('{{this.wishproduct._id}}')" class="primary-btn text-white"
+                        style="border-radius: 3px; line-height: 40px; padding: 0 10px;">Add to cart</a>
+                </div>
+                <div class="col-6 col-sm-4 col-md-2 mt-4">
+                    <div><a onclick="removeFromwishlist('{{this.wishproduct._id}}')" class="primary-btn text-white"
+                            style="border-radius: 3px; line-height: 40px; padding: 0 10px;">Remove</a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            {{/each}}
+
             {{else}}
             <div style="height:10rem;" class="d-flex justify-content-center">
                 <h3>Your Wishlist Is Empty</h3>
