--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -181,7 +181,7 @@
 					<div class="overlay"></div>
 					<img class="img-fluid w-150" style="height:25.7rem;" src="img\category\s-p1.jpg" alt="">
 					<div class="deal-details">
-						<a href="/shop">
+						<a href="/shopcategory/all/0">
 							<h6 class="deal-title">Sneaker Sports</h6>
 						</a>
 					</div>
