--- a/views/user/product-detail.hbs
+++ b/views/user/product-detail.hbs
@@ -3,9 +3,14 @@
 		<div class="row s_product_inner">
 			<div class="col-lg-7">
 				<div class="s_Product_carousel">
-					<div id="img-container" class="d-flex">
-						<img id=featured width="350px" src="/proimg/{{product._id}}.jpg">
-						<div id="lens"></div>
+					<div id="img-container" class="row">
+						<div class="d-none d-sm-block">
+							<img id=featured width="350px" src="/proimg/{{product._id}}.jpg">
+						</div>
+						<div class="d-sm-none">
+							<img id=featured width="280px" src="/proimg/{{product._id}}.jpg">
+						</div>
+						<div class="mt-1 d-none d-sm-block" id="lens"></div>
 					</div>
 				</div>
 			</div>
